--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "data": "data.json",
   "logo": {
-    "file": "www.korea.ac.kr/mbshome/mbs/university/images/img/img_1_1_5_1_2__9.gif",
+    "file": "\thttps://www.korea.ac.kr/mbshome/mbs/university/images/img/img_1_1_5_1_2__9.gif",
     "link": "http://dh.aks.ac.kr/~jisun/edu/index.php/%EB%B0%95%EB%8F%99%EC%9D%80KU23",
     "text": "박동은"
   },
